--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,1 +1,25 @@
-<h1>about page</h1>
+<h3>About</h3>
+<p>CodePrep utilises the following technologies</p>
+<div class="row">
+    <a href="https://nodejs.org/en/" target="_blank">
+        <img class="stack-img mr-1 hvr-float" data-tippy="Nodejs" src="img/stack/nodejs.png">
+    </a>
+    <a href="https://expressjs.com/" target="_blank">
+        <img class="stack-img-express mr-1 hvr-float" data-tippy="Express" src="img/stack/express.png">
+    </a>
+    <a href="https://www.mongodb.com/" target="_blank">
+        <img class="stack-img mr-1 hvr-float" data-tippy="MongoDB" src="img/stack/mongodb.png">
+    </a>
+    <a href="https://mongoosejs.com/" target="_blank">
+        <img class="stack-img-mongoose mr-1 hvr-float" data-tippy="Mongoose" src="img/stack/mongoose.png">
+    </a>
+    <a href="http://www.passportjs.org/" target="_blank">
+        <img class="stack-img mr-1 hvr-float" data-tippy="Passportjs" src="img/stack/passport.png">
+    </a>
+    <a href="https://handlebarsjs.com/" target="_blank">
+        <img class="stack-img mr-1 hvr-float" data-tippy="Handlebars" src="img/stack/handlebars.png">
+    </a>
+    <a href="https://getbootstrap.com/" target="_blank">
+        <img class="stack-img hvr-float" data-tippy="Bootstrap" src="img/stack/bootstrap.png">
+    </a>
+</div>
