--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/img/logo.ico" type="image/png">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
@@ -17,100 +18,102 @@
 <body>
     <div class="gradient-container">
         <div class="container">
-        {{!-- navbar --}}
-        <nav class="navbar navbar-expand-sm pb-4 pt-4">
-            <div class="container">
-                <a class="navbar-brand" href="/">
-                    <img class="brand hvr-float" src="/img/codeprep.png">
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link hvr-float" href="/dashboard"><strong>Dashboard</strong></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link hvr-float" href="/about"><strong>About</strong></a>
-                        </li>
-                    </ul>
+            {{!-- navbar --}}
+            <nav class="navbar navbar-expand-sm pb-4 pt-4">
+                <div class="container">
+                    <a class="navbar-brand" href="/">
+                        <img class="brand hvr-float" src="/img/codeprep.png">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item">
+                                <a class="nav-link hvr-float" href="/dashboard"><strong>Dashboard</strong></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link hvr-float" href="/about"><strong>About</strong></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            {{!-- blue body --}}
+            <div class="text-center container opener">
+                <h1 class="header-open animated fadeInUp"><strong>CodePrep helps you prepare for your coding
+                        interview</strong> </h1>
+                <p class="sub-open animated fadeInUp">Keep track of your Data Structure & Algorithm problems</p>
+                <a type="button" href="/dashboard" class="btn btn-lg btn-default hvr-float mb-5 animated fadeInUp">Try
+                    it out</a>
+                <div class="container">
+                    <img class="rounded img-fluid mb-5 home-src animated fadeIn" data-tippy="Some Sample Questions"
+                        alt="Responsive image" src="/img/home-src.png">
                 </div>
             </div>
-        </nav>
-        {{!-- blue body --}}
-        <div class="text-center container opener">
-            <h1 class="header-open animated fadeInUp"><strong>CodePrep helps you prepare for your coding interview</strong> </h1>
-            <p class="sub-open animated fadeInUp">Keep track of your Data Structure & Algorithm problems</p>
-            <a type="button" href="/dashboard" class="btn btn-lg btn-default hvr-float mb-5 animated fadeInUp">Try it out</a>
-            <div class="container">
-                <img class="rounded img-fluid mb-5 home-src animated fadeIn" data-tippy="Some Sample Questions"
-                    alt="Responsive image" src="/img/home-src.png">
-            </div>
-        </div>
-        {{!-- end of blue body --}}
+            {{!-- end of blue body --}}
         </div>
     </div>
     {{!-- end of gradient body --}}
-    {{!-- <div class="container">
-        <h1>filler text</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-             Aperiam delectus doloremque inventore nesciunt assumenda cupiditate saepe 
-             repellat dolores at natus fugiat quia temporibus necessitatibus, ab aut ex minima! Voluptatibus, laborum.</p>
-    </div> --}}
-    {{!-- footer --}}
+    {{!-- start of footer --}}
     <footer class="d-flex justify-content-center mt-auto">
         <div class="container">
             {{!-- info footer --}}
             <div class="row">
-            <div class="col-sm-6 footer-info">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <h6 class="footer-listhead">CodePrep</h6>
-                        <ul class="footer-list">
-                            <li>
-                                <a class="footer-item" href="/dashboard">Dashboard</a>
-                            </li>
-                            <li>
-                                <a class="footer-item" href="/about">About</a>
-                            </li>
-                            <li>
-                                <a class="footer-item" href="/users/register">Register</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-6">
-                        <h6 class="footer-listhead">Logistics</h6>
-                        <ul class="footer-list">
-                            <li>
-                                <a class="footer-item" href="mailto:info.codeprep@gmail.com">Contact</a>
-                            </li>
-                            <li>
-                                <a class="footer-item" href="https://github.com/code-prep/application/blob/master/.github/ISSUE_TEMPLATE/bug_report.md">Report a bug</a>
-                            </li>
-                            <li>
-                                <a class="footer-item" href="https://github.com/code-prep/application">Source Code</a>
-                            </li>
-                        </ul>
+                <div class="col-sm-6 footer-info">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <h6 class="footer-listhead">CodePrep</h6>
+                            <ul class="footer-list">
+                                <li>
+                                    <a class="footer-item" href="/dashboard">Dashboard</a>
+                                </li>
+                                <li>
+                                    <a class="footer-item" href="/about">About</a>
+                                </li>
+                                <li>
+                                    <a class="footer-item" href="/users/register">Register</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-6">
+                            <h6 class="footer-listhead">Logistics</h6>
+                            <ul class="footer-list">
+                                <li>
+                                    <a class="footer-item" href="mailto:info.codeprep@gmail.com">Contact</a>
+                                </li>
+                                <li>
+                                    <a class="footer-item"
+                                        href="https://github.com/code-prep/application/blob/master/.github/ISSUE_TEMPLATE/bug_report.md">Report
+                                        a bug</a>
+                                </li>
+                                <li>
+                                    <a class="footer-item" href="https://github.com/code-prep/application">Source
+                                        Code</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-            </div>
-            {{!-- company footer --}}
-            <div class="col-sm-6 footer-company">
-                <a href="/"><img class="footer-brand hvr-float" src="/img/codeprep.png"></a>
-                <br>
-                <span>Copyright &copy; 2019 <strong>CodePrep</strong></span>
-            </div>
+                {{!-- company footer --}}
+                <div class="col-sm-6 footer-company">
+                    <a href="/"><img class="footer-brand hvr-float" src="/img/codeprep.png"></a>
+                    <br>
+                    <span>Copyright &copy; 2019 <strong>CodePrep</strong></span>
+                </div>
             </div>
         </div>
     </footer>
     {{!-- end of footer --}}
     {{!-- library scripts --}}
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" 
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
     <script src="https://unpkg.com/tippy.js@3/dist/tippy.all.min.js"></script>
 </body>
+
 </html>
